--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -1,1 +1,1 @@
-@import url(~antd/dist/antd.css)
+@import url(~antd/dist/antd.css);.login-form{max-width:300px}.login-form-forgot{float:right}.login-form-button{width:100%}
