login compare/general components

--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -1,1 +1,1 @@
-@import url(~antd/dist/antd.css);.login-form{max-width:300px}.login-form-forgot{float:right}.login-form-button{width:100%}
+@import url(~antd/dist/antd.css);@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic|Unica+One");.thunderNav{font-size:2vw;padding:3vh 0}.login-form-button{width:100%}.App{font-family:"Unica One",cursive;text-align:center}
