--- a/frontend/src/styles/theme.sass
+++ b/frontend/src/styles/theme.sass
@@ -1,4 +1,11 @@
 @import '~antd/dist/antd.css'
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic|Unica+One')
 
+@import partials/_navbar
 @import partials/_signup
 @import partials/_landing
+// font-family: 'Nanum Gothic', sans-serif;
+
+.App
+  font-family: 'Unica One', cursive
+  text-align: center
