--- a/frontend/src/styles/partials/_landing.sass
+++ b/frontend/src/styles/partials/_landing.sass
@@ -1,2 +1,16 @@
-.login-form-button
-  width: 100%
+.login-form
+  position: relative
+  top: 20vh
+  color: black
+  .login-form-button
+    font-family: 'Nanum Gothic', sans-serif
+    letter-spacing: 1em
+    font-size: 1em
+    height: 4vh
+    width: 100%
+    background-color: pink
+    border: pink
+  
+.ant-input-affix-wrapper:hover .ant-input:not(.ant-input-disabled) 
+    border-color: pink
+    border-width: 3px !important
