--- a/frontend/src/styles/partials/_navbar.sass
+++ b/frontend/src/styles/partials/_navbar.sass
@@ -1,3 +1,12 @@
 .thunderNav
-  font-size: 2vw
+  font-size: 2em
   padding: 3vh 0
+  a
+    text-decoration: none
+  .signup-button
+    font-family: 'Nanum Gothic', sans-serif
+    letter-spacing: 0.3em
+    font-size: 0.5em
+    width: 10rem
+    background: pink
+    border: pink
