--- a/frontend/src/styles/theme.sass
+++ b/frontend/src/styles/theme.sass
@@ -4,7 +4,7 @@
 @import partials/_navbar
 @import partials/_signup
 @import partials/_landing
-// font-family: 'Nanum Gothic', sans-serif;
+// font-family: 'Nanum Gothic', sans-serif
 
 .App
   font-family: 'Unica One', cursive
