--- a/frontend/src/styles/partials/_signup.sass
+++ b/frontend/src/styles/partials/_signup.sass
@@ -1,11 +1,20 @@
-.signup-body
-  background-color: pink
+$primary-pink: #F8BBD0
 
+.ant-form-item-label
+  font-family: 'Unica One', cursive
+  
 .register-button
-  color: black
-  background-color: white
+  background-color: $primary-pink
   border: white
 
 .register-button:hover
-  background-color: white
-  color: black
+  background-color: $primary-pink
+
+.ant-input:hover
+  border-color: $primary-pink
+  border-width: 3px !important
+
+.signup-image
+  max-width: 40vh
+  position: relative
+  top: 15vh
