--- a/frontend/src/styles/theme.sass
+++ b/frontend/src/styles/theme.sass
@@ -4,7 +4,11 @@
 @import partials/_navbar
 @import partials/_signup
 @import partials/_landing
+@import partials/_footer
+
+// $primary-pink: #F8BBD0
 // font-family: 'Nanum Gothic', sans-serif
+// font-family: 'Unica One', cursive
 
 .App
   font-family: 'Unica One', cursive
