logged in nav/explore page

--- a/frontend/src/styles/theme.sass
+++ b/frontend/src/styles/theme.sass
@@ -4,6 +4,7 @@
 @import partials/_navbar
 @import partials/_signup
 @import partials/_landing
+@import partials/_explore
 @import partials/_footer
 
 // $primary-pink: #F8BBD0
